--- a/index.css
+++ b/index.css
@@ -1,210 +1,210 @@
 body {
-    color: #2b283a;
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
+  color: #2b283a;
+  font-family: "Roboto", sans-serif;
+  margin: 0;
 }
 
 /* ----- TYPOGRAPHY ----- */
 
-h1, 
+h1,
 h3 {
-    margin: 0;
+  margin: 0;
 }
 
 h1 {
-    color: whitesmoke;
-    font-size: 1.75rem;
+  color: whitesmoke;
+  font-size: 1.8rem;
 }
 
 h2 {
-    color: #82735C;
-    font-size: 1.375rem;
-    margin-top: 0;
+  color: #82735c;
+  font-size: 1.375rem;
+  margin-top: 0;
 }
 
 h3 {
-    font-size: 1.25rem;
+  font-size: 1.25rem;
 }
 
 p {
-    line-height: 1.5;
+  line-height: 1.5;
 }
 
 .subheading {
-    display: block;
-    font-size: 1rem;
-    color: #9DB17C;
+  display: block;
+  font-size: 1rem;
+  color: #9db17c;
 }
 
 .section-two h2 {
-    color: inherit;
+  color: inherit;
 }
 
 /* ----- LINKS ----- */
 
 a {
-    color: #D1F5BE;
-    text-decoration: underline dotted; 
+  color: #d1f5be;
+  text-decoration: underline dotted;
 }
 
-a:hover, 
+a:hover,
 a:active {
-    color: #9DB17C;
+  color: #9db17c;
 }
 
 .btn {
-    font-size: 1.125rem;
-    text-align: center;
-    font-weight: 500;
-    text-decoration: none;
-    display: block;
-    padding: 0.5em 1em;
-    margin-bottom: 1em;
-    border-radius: 4.6px;
+  font-size: 1.125rem;
+  text-align: center;
+  font-weight: 500;
+  text-decoration: none;
+  display: block;
+  padding: 0.5em 1em;
+  margin-bottom: 1em;
+  border-radius: 4.6px;
 }
 
 .btn-dark {
-    color: white;
-    background: #82735C;
+  color: white;
+  background: #82735c;
 }
 
 .btn-mid {
-    color: #4B3B40; 
-    background: #9DB17C; 
+  color: #4b3b40;
+  background: #9db17c;
 }
 
 .btn-light {
-    color: #4B3B40; 
-    background: whitesmoke;
+  color: #4b3b40;
+  background: whitesmoke;
 }
 
-.btn:hover, 
+.btn:hover,
 .btn:active {
-    color: #4B3B40;
-    background-color: #D1F5BE;
+  color: #4b3b40;
+  background-color: #d1f5be;
 }
 
 /* ----- LAYOUT ----- */
 
-header, 
-section, 
+header,
+section,
 footer {
-    padding: 1.25em 0;
+  padding: 1.25em 0;
 }
 
-header, 
+header,
 .section-two {
-    background-color: #4B3B40;
+  background-color: #4b3b40;
 }
 
 .section-two {
-    color: whitesmoke;
+  color: whitesmoke;
 }
 
 .container {
-    width: 90%;
-    max-width: 800px;
-    margin: 0 auto;
+  width: 90%;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 .main-image {
-    width: 100%;
-    display: block;
-    max-width: 640px;
-    margin: 0 auto 2em;
+  width: 100%;
+  display: block;
+  max-width: 640px;
+  margin: 0 auto 2em;
 }
 
 .section-two-image-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1em;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1em;
 }
 
 .feature-image {
-    width: 100%;
-    border-radius: 4.6px;
+  width: 100%;
+  border-radius: 4.6px;
 }
 
 .feature-item {
-    flex: 1 260px;
+  flex: 1 260px;
 }
 
 footer {
-    text-align: center;
-    color: #82735C;
+  text-align: center;
+  color: #82735c;
 }
 
 /* ----- NAVIGATION ----- */
 
 nav a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 1.125rem;
-    padding: 0.85em 0;
-    display: block;
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.125rem;
+  padding: 0.85em 0;
+  display: block;
 }
 
 ul {
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
 }
 
 /* ----- MEDIA QUERIES ----- */
 
 @media (max-width: 767px) {
-    header {
-        text-align: center;
-    }
+  header {
+    text-align: center;
+  }
 
-    nav {
-        margin-top: 1.5em;
-    }
- 
-    li:not(:last-child) {
-        border-bottom: 1px dotted #D1F5BE;
-    }  
+  nav {
+    margin-top: 1.5em;
+  }
+
+  li:not(:last-child) {
+    border-bottom: 1px dotted #d1f5be;
+  }
 }
 
 @media (min-width: 768px) {
-    header,
-    section,
-    footer {
-        padding: 2.875em 0;        
-    }
-    
-    header .container,
-    nav ul {
-        display: flex;
-    }
-    
-    header .container {
-        justify-content: space-between;
-        align-items: center;
-    }
-    
-    nav li {
-        margin-left: 1.25em;
-    }
-    
-    .btn {
-        display: inline-block;
-        margin-right: 0.5em;
-    }
-    
-    h1 {
-        font-size: 2.25rem;
-    }
-    
-    h2 {
-        font-size: 1.75rem;
-    }
-    
-    .subheading {
-        font-size: 1.25rem;
-    }
-    
-    p {
-        font-size: 1.125rem;
-    }
+  header,
+  section,
+  footer {
+    padding: 2.875em 0;
+  }
+
+  header .container,
+  nav ul {
+    display: flex;
+  }
+
+  header .container {
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  nav li {
+    margin-left: 1.25em;
+  }
+
+  .btn {
+    display: inline-block;
+    margin-right: 0.5em;
+  }
+
+  h1 {
+    font-size: 2.25rem;
+  }
+
+  h2 {
+    font-size: 1.75rem;
+  }
+
+  .subheading {
+    font-size: 1.25rem;
+  }
+
+  p {
+    font-size: 1.125rem;
+  }
 }
